# Schmale_Intro_to_Python

./: Licence.txt  README.md  Tutorial.ipynb  pyproject.toml
.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
football_stats_analysis/: DataHandler.py  StatsCalculator.py  Visualizer.py  data_handler.py
src/football_stats_analysis/: StatsCalculator.py  __init__.py
