[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football_stats_analysis"
version = "1.0.0"
description = "A Python package for loading, preprocessing, analyzing, and visualizing European football data."
authors = [
    { name="Tim Schmale", email="tim.schmale@tu-dortmund.de" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "matplotlib>=3.5"
]

packages = [{ include = "football_stats_analysis", from = "src" }]